# clinical-pipeline

./: .gitignore  README.md  pyproject.toml
clinical-pipeline/: main.py
clinical-pipeline/sample_docs/: bill.txt  long_letter.txt  no_diagnoses.txt  nonsense.txt  prior_auth_letter.txt
